Fix: remove excessive scrollbars from the TabLayout view (#6689)
* Remove excessive scrollbars from the TabLayout view


* Updating snapshots


* Updating snapshots harder

--- a/src/renderer/components/item-object-list/item-list-layout.scss
+++ b/src/renderer/components/item-object-list/item-list-layout.scss
@@ -31,7 +31,7 @@
 
   > .items {
     position: relative;
-    min-height: 200px;
+    min-height: 130px;
   }
 }
 
